# api

./: .gitattributes  .gitignore  api.protoset  buf.gen.yaml  go.mod  go.sum  grpcapi.json  openapi.yaml
.github/workflows/: lint.yaml  publish.yaml
grpc/cpp/vasystem/api/v2/: aircraft.grpc.pb.cc  aircraft.grpc.pb.h  aircraft.pb.cc  aircraft.pb.h  airlines.grpc.pb.cc  airlines.grpc.pb.h  airlines.pb.cc  airlines.pb.h  airports.grpc.pb.cc  airports.grpc.pb.h  airports.pb.cc  airports.pb.h  dayofweek.grpc.pb.cc  dayofweek.grpc.pb.h  dayofweek.pb.cc  dayofweek.pb.h  routes.grpc.pb.cc  routes.grpc.pb.h  routes.pb.cc  routes.pb.h  timeofday.grpc.pb.cc  timeofday.grpc.pb.h  timeofday.pb.cc  timeofday.pb.h  virtual_airline.grpc.pb.cc  virtual_airline.grpc.pb.h  virtual_airline.pb.cc  virtual_airline.pb.h  virtual_airlines.grpc.pb.cc  virtual_airlines.grpc.pb.h  virtual_airlines.pb.cc  virtual_airlines.pb.h
grpc/csharp/: Aircraft.cs  Airlines.cs  AirlinesGrpc.cs  Airports.cs  Dayofweek.cs  Routes.cs  RoutesGrpc.cs  Timeofday.cs  VirtualAirline.cs  VirtualAirlineGrpc.cs  VirtualAirlines.cs  VirtualAirlinesGrpc.cs
grpc/go/vasystem/api/v2/: aircraft.pb.go  airlines.pb.go  airlines_grpc.pb.go  airports.pb.go  dayofweek.pb.go  routes.pb.go  routes_grpc.pb.go  timeofday.pb.go  virtual_airline.pb.go  (+3 more)
grpc/rust/: Cargo.toml  api.protoset  build.rs
grpc/typescript/google/protobuf/: duration.ts
proto/: buf.yaml
proto/vasystem/api/v2/: aircraft.proto  airlines.proto  airports.proto  dayofweek.proto  routes.proto  virtual_airline.proto  virtual_airlines.proto
(+74 files in other folders)
